# py-course-project

./: README.md  pyproject.toml
src/mylib/: disktable.py  table_manager.py  tablemodel.py
src/mylib/_internal/: table_serializing.py
src/mylib/common/: exception.py
tests/: test_basic.py
