[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "0.1.0"
description = "desc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
