[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "0.1.0"
description = "desc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
    "openpyxl>=3.0.0",
]


[project.scripts]
mylib = "mylib.cli:main"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
